[gd_scene load_steps=17 format=2]

[ext_resource path="res://logic/paddle.gd" type="Script" id=1]
[ext_resource path="res://paddle.png" type="Texture" id=2]
[ext_resource path="res://PowerUpSpawner.gd" type="Script" id=3]
[ext_resource path="res://logic/ball.gd" type="Script" id=4]
[ext_resource path="res://ball.png" type="Texture" id=5]
[ext_resource path="res://separator.png" type="Texture" id=6]
[ext_resource path="res://logic/wall.gd" type="Script" id=7]
[ext_resource path="res://logic/ceiling_floor.gd" type="Script" id=8]
[ext_resource path="res://PowerUp.gd" type="Script" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 4 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 200 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 320, 10 )

[sub_resource type="RectangleShape2D" id=5]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 8.09766, 4.57182 )

[sub_resource type="StreamTexture" id=7]
load_path = "res://.import/ball.png-9a4ca347acb7532f6ae347744a6b04f7.stex"

[node name="Pong" type="Node2D"]

[node name="Background" type="ColorRect" parent="."]
margin_left = 0.840881
margin_top = 0.282564
margin_right = 640.841
margin_bottom = 400.282
color = Color( 0.141176, 0.152941, 0.164706, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="Area2D" parent="." groups=[
"Paddle",
]]
modulate = Color( 0, 1, 1, 1 )
position = Vector2( 67.6285, 192.594 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="Left"]
texture = ExtResource( 2 )

[node name="Collision" type="CollisionShape2D" parent="Left"]
shape = SubResource( 1 )

[node name="Timeout_Left" type="Timer" parent="Left"]
one_shot = true

[node name="Right" type="Area2D" parent="." groups=[
"Paddle",
]]
modulate = Color( 1, 0, 1, 1 )
position = Vector2( 563.815, 188.919 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="Right"]
texture = ExtResource( 2 )

[node name="Collision" type="CollisionShape2D" parent="Right"]
shape = SubResource( 1 )

[node name="Timeout_Right" type="Timer" parent="Right"]
one_shot = true

[node name="Ball" type="Area2D" parent="."]
position = Vector2( 320.5, 191.124 )
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="Ball"]
texture = ExtResource( 5 )

[node name="Collision" type="CollisionShape2D" parent="Ball"]
shape = SubResource( 2 )

[node name="Separator" type="Sprite" parent="."]
position = Vector2( 320, 200 )
texture = ExtResource( 6 )

[node name="RightWall" type="Area2D" parent="."]
position = Vector2( 650, 200 )
script = ExtResource( 7 )

[node name="Collision" type="CollisionShape2D" parent="RightWall"]
shape = SubResource( 3 )

[node name="SCORE_Right" type="Label" parent="RightWall"]
margin_left = -306.0
margin_top = -176.0
margin_right = -262.0
margin_bottom = -162.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftWall" type="Area2D" parent="."]
position = Vector2( -10, 200 )
script = ExtResource( 7 )

[node name="Collision" type="CollisionShape2D" parent="LeftWall"]
shape = SubResource( 3 )

[node name="SCORE_Left" type="Label" parent="LeftWall"]
margin_left = 298.0
margin_top = -176.0
margin_right = 342.0
margin_bottom = -162.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ceiling" type="Area2D" parent="."]
position = Vector2( 320, -10 )
script = ExtResource( 8 )

[node name="Collision" type="CollisionShape2D" parent="Ceiling"]
shape = SubResource( 4 )

[node name="Floor" type="Area2D" parent="."]
position = Vector2( 320, 410 )
script = ExtResource( 8 )
_bounce_direction = -1

[node name="Collision" type="CollisionShape2D" parent="Floor"]
shape = SubResource( 4 )

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 320, 200 )
current = true

[node name="PowerUpSpawner" type="Area2D" parent="."]
position = Vector2( 320, 0 )
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PowerUpSpawner"]
shape = SubResource( 5 )

[node name="PPTimer" type="Timer" parent="PowerUpSpawner"]
one_shot = true

[node name="PowerUp" type="Area2D" parent="."]
position = Vector2( 316.341, -56.278 )
script = ExtResource( 9 )

[node name="PowerUpColl" type="CollisionShape2D" parent="PowerUp"]
shape = SubResource( 6 )

[node name="Sprite" type="Sprite" parent="PowerUp"]
texture = SubResource( 7 )

[node name="Split" type="Area2D" parent="."]
position = Vector2( 316.341, -56.278 )
script = ExtResource( 9 )

[node name="PowerUpColl" type="CollisionShape2D" parent="Split"]
shape = SubResource( 6 )

[node name="Sprite" type="Sprite" parent="Split"]
texture = SubResource( 7 )

[connection signal="area_entered" from="Left" to="Left" method="_on_area_entered"]
[connection signal="area_entered" from="Right" to="Right" method="_on_area_entered"]
[connection signal="area_entered" from="RightWall" to="RightWall" method="_on_wall_area_entered"]
[connection signal="area_entered" from="LeftWall" to="LeftWall" method="_on_wall_area_entered"]
[connection signal="area_entered" from="Ceiling" to="Ceiling" method="_on_area_entered"]
[connection signal="area_entered" from="Floor" to="Floor" method="_on_area_entered"]
[connection signal="area_entered" from="PowerUp" to="PowerUp" method="_on_PowerUp_area_entered"]
